niszczenie przedmiotem danego bloku